sdl-parser/src/snapshots/sdl_parser__node__tests__can_parse_mixed_short_and_longhand_node_roles.snap
---
source: sdl-parser/src/node.rs
expression: parsed_sdl
---
name: test-scenario
description: some-description
start: "2022-01-20T13:00:00Z"
end: "2022-01-20T23:00:00Z"
nodes:
  win-10:
    type: VM
    description: ~
    resources:
      ram: 2147483648
      cpu: 2
    source:
      name: windows10
      version: "*"
    features: ~
    conditions: ~
    vulnerabilities: ~
    roles:
      admin:
        username: admin
        entities: ~
      user:
        username: user
        entities:
          - blue-team.bob
features: ~
infrastructure: ~
conditions: ~
vulnerabilities: ~
capabilities: ~
metrics: ~
evaluations: ~
tlos: ~
entities:
  blue-team:
    name: The Blue Team
    description: ~
    role: ~
    mission: ~
    categories: ~
    vulnerabilities: ~
    tlos: ~
    facts: ~
    entities:
      bob:
        name: Blue Bob
        description: ~
        role: ~
        mission: ~
        categories: ~
        vulnerabilities: ~
        tlos: ~
        facts: ~
        entities: ~
goals: ~
injects: ~
events: ~
scripts: ~
stories: ~

