sdl-parser/src/snapshots/sdl_parser__node__tests__includes_nodes_with_defined_features.snap
---
source: sdl-parser/src/node.rs
expression: scenario
---
name: test-scenario
description: some-description
start: "2022-01-20T13:00:00Z"
end: "2022-01-20T23:00:00Z"
nodes:
  win-10:
    type: VM
    description: ~
    resources:
      ram: 2147483648
      cpu: 2
    source:
      name: windows10
      version: "*"
    features:
      feature-1: admin
      feature-2: moderator
    conditions: ~
    vulnerabilities: ~
    roles:
      admin:
        username: username
        entities: ~
      moderator:
        username: name
        entities: ~
features:
  feature-1:
    name: ~
    type: Service
    source:
      name: dl-library
      version: "*"
    dependencies: ~
    vulnerabilities: ~
    destination: ~
    description: ~
    environment: ~
  feature-2:
    name: ~
    type: Artifact
    source:
      name: my-cool-artifact
      version: 1.0.0
    dependencies: ~
    vulnerabilities: ~
    destination: ~
    description: ~
    environment: ~
infrastructure: ~
conditions: ~
vulnerabilities: ~
capabilities: ~
metrics: ~
evaluations: ~
tlos: ~
entities: ~
goals: ~
injects: ~
events: ~
scripts: ~
stories: ~

